# LLM-BUBBLE-TRANSFORMER

./: .gitignore  AGENTS.md  CHARLACLAUDE.md  FIXOPENCODE.md  LICENSE  README-es.md  README.md  TRESMAYO.md  all_layer_bonus_sweep_results.json  auto_snapshot.py  bonus_sweep_results.json  llm_snap_server.py  llm_snap_ui.py  meta-prompt-sdot-qwen3.md  num_bubbles_sweep_results.json  per_layer_bonus_sweep_results.json  pyproject.toml  requirements.txt  run_with_snapshot.py  siri_ppl_1layer_results.json
IMPORTANTE/: BT-V5_00_bases_primarias.md  BT-V5_01_architecture.md  BT-V5_02_siri_theory.md  BT-V5_03_differentiability_routing.md  BT-V5_04_complexity_scaling.md  BT-V5_05_protocol_positioning.md  BT-V5_06_focus_bubble.md
data/: test_corpus.jsonl
docs/: Bubble_Transformer_V3_arXiv.md  REALITY.txt  architecture.txt  blog_post.md  references.bib  snapshotting.md  sprint4-bubble-transformer.md
experiments/: AGENTS.md  __init__.py  analyze_results.py  benchmark_fine_beta.py  benchmark_focus_bubble.py  benchmark_focus_deltanet_sweep.py  benchmark_focus_fine_sweep.py  benchmark_focus_layer_sweep_optimal.py  benchmark_focus_multilayer.py  benchmark_hybrid_approaches.py  benchmark_l9_remeasure.py  benchmark_learnable_beta.py  config.py  crowding_metric.py  deltanet_attention.py  diagnose_beta_nan.py  epsilon_sweep.py  epsilon_sweep_hybrid.py  eval_deltanet_parallel.py  eval_gumbel_sinkhorn.py  eval_niah.py  extract_embeddings.py  extract_embeddings_simple.py  focus_bubble_attention.py  generate_mock_embeddings.py  goat_attention.py  hybrid_attention.py  lambda_sweep.py  (+33 more)
(+135 files in other folders)
